--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img class="logo-prince" src="images/image-principal-removebg-preview.png" alt="">
             </div>
             <div class="menu">
-                <a href=""><p>Accueil</p></a>
+                <a href="fallou.html"><p>Accueil</p></a>
                 <a href=""><p class="check">Nos applications <span class="material-symbols-outlined">
                     expand_more
                     </span></p></a>
